--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "kcors": "^1.0.1",
     "koa": "^0.1.2",
     "koa-json-body": "^0.0.3",
+    "koa-markdown": "^2.0.1",
     "koa-route": "^1.1.4",
     "koa-router": "^2.2.0",
     "koa-static": "^1.4.9",
